src/index.css
.montserrat-montserrat {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
}

* {
  font-family: "Montserrat", sans-serif;
  margin: 0;
  padding: 0;
}

@media (max-width: 900px) {
  section {
    padding: 0!important;
  }
}

